force-app/config/main/default/objects/SN_Feature_Toggle__mdt/fields/Depends_On_Feature__c.field-meta.xml
<CustomField>
    <fullName>Depends_On_Feature__c</fullName>
    <label>Depends On Feature</label>
    <length>80</length>
    <type>Text</type>
</CustomField>