force-app/config/main/default/objects/SN_Feature_Toggle__mdt/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <description>Last date this assignment target should be considered valid; leave blank for open-ended use.</description>
    <fullName>Effective_End_Date__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>