force-app/config/main/default/objects/SN_Feature_Toggle__mdt/fields/Feature_Key__c.field-meta.xml
<CustomField>
    <description>Stable feature identifier checked by future orchestration code.</description>
    <fullName>Feature_Key__c</fullName>
    <label>Feature Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>