force-app/config/main/default/objects/SN_Feature_Toggle__mdt/fields/Is_Kill_Switch__c.field-meta.xml
<CustomField>
    <fullName>Is_Kill_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Kill Switch</label>
    <type>Checkbox</type>
</CustomField>