force-app/config/main/default/objects/SN_Feature_Toggle__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <description>Business rationale, owner notes, or rollout caveats.</description>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>