force-app/config/main/default/objects/SN_Feature_Toggle__mdt/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <description>Owning team responsible for approving changes to this record.</description>
    <fullName>Owner_Team__c</fullName>
    <label>Owner Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>