force-app/config/main/default/objects/SN_Feature_Toggle__mdt/fields/Request_Type_Key__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_Key__c</fullName>
    <label>Request Type Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>